--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -4,7 +4,9 @@
 
 <ul>
   {% for topic in topics%}
-  <li>{{topic}}</li>
+  <li>
+    <a href="{% url 'learning_logs:topic' topic.id %}">{{topic.text}}</a>
+  </li>
   {%empty%}
   <li>no topis added here , check back later</li>
 
