--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,17 +1,14 @@
-{% extends 'learning_logs/base.html'%}
-
-{% block content%}
+{% extends 'learning_logs/base.html'%} {% block content%}
 
 <p>
-    <a href="{% url 'learning_logs:topic' topic.id%}">{{topic}}</a>
+  <a href="{% url 'learning_logs:topic' topic.id%}">{{topic}}</a>
 </p>
 
 <p>Add a new entry:</p>
 
-<form action="{% url 'learning_logs:new_entry' topic.id%}" method='post'>
-    {% csrf_token %}
-    {{form.as_div}}
-    <buttton name='submit'> Add Entry</button>
+<form action="{% url 'learning_logs:new_entry' topic.id%}" method="post">
+  {% csrf_token %} {{form.as_div}}
+  <button name="submit">Add Entry</button>
 </form>
 
 {% endblock content%}
