--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {%endif %}
 
-<form action="{% url 'account:login'%}" method="post">
+<form action="{% url 'accounts:login'%}" method="post">
   {%csrf_token%} {{form.as_div}}
 
   <button name="submit">Log in</button>
