--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,18 +1,34 @@
-{% extends 'learning_logs/base.html' %} {%block content%}
+{% extends 'learning_logs/base.html' %} {% block page_header %}
+<div class="p-3 bg-primary text-white rounded mb-4">
+  <h1 class="text-center">Your Learning Topics</h1>
+</div>
+{% endblock page_header %} {% block content %}
+<div class="container">
+  <!-- Topics List -->
+  <div class="list-group shadow mb-4">
+    {% for topic in topics %}
+    <a
+      href="{% url 'learning_logs:topic' topic.id %}"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+    >
+      <span class="fw-bold text-primary">{{ topic.text }}</span>
+      <i class="bi bi-arrow-right-circle text-primary fs-5"></i>
+    </a>
+    {% empty %}
+    <div class="list-group-item text-center text-muted">
+      No topics have been added yet.
+    </div>
+    {% endfor %}
+  </div>
 
-<p>Topics</p>
-
-<ul>
-  {% for topic in topics%}
-  <li>
-    <a href="{% url 'learning_logs:topic' topic.id %}">{{topic.text}}</a>
-  </li>
-  {%empty%}
-  <li>no topis added here , check back later</li>
-
-  {%endfor%}
-</ul>
-
-<a href="{% url "learning_logs:new_topic"%}"> Add a new topic</a>
-
-{%endblock content%}
+  <!-- Add New Topic Button -->
+  <div class="text-center">
+    <a
+      href="{% url 'learning_logs:new_topic' %}"
+      class="btn btn-success btn-lg shadow-sm"
+    >
+      <i class="bi bi-plus-circle"></i> Add a New Topic
+    </a>
+  </div>
+</div>
+{% endblock content %}
